--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ websockets==11.0.3 # Or your preferred version
 ecdsa==0.18.0 # Or your preferred version
 cryptography==41.0.3 # Or your preferred version
 requests==2.32.4
+quart==0.18.3
